--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,12 @@
-backports.shutil-get-terminal-size==1.0.0
-boto==2.45.0
-bz2file==0.98
-cycler==0.10.0
-decorator==4.0.10
 dill==0.2.5
-enum34==1.1.6
-gensim==0.13.3
 matplotlib==1.5.3
 networkx==1.11
 numpy==1.11.2
 pandas==0.19.1
-pathlib2==2.1.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.9
-ptyprocess==0.5.1
-py==1.4.32
-Pygments==2.1.3
-pyparsing==2.1.10
 pytest==3.0.5
-python-dateutil==2.6.0
-pytz==2016.10
-rdp==0.8
-requests==2.12.4
-scikit-learn==0.18.1
+sklearn==0.18.1
 scikits.bootstrap==0.3.2
 scipy==0.18.1
 seaborn==0.7.1
-simplegeneric==0.8.1
 six==1.10.0
-smart-open==1.3.5
-Theano==0.8.2
-traitlets==4.3.1
-wcwidth==0.1.7
+future
